<resources>
    <string name="app_name">TaxiDriver</string>
    <string name="api_key" translatable="false">AIzaSyAAjp4wuz5FyteoKH3Yp7Cv8pS1K86fJw0</string>
    <string name="facebook_app_id">313870737210409</string>
    <string name="fb_login_protocol_scheme">fb313870737210409</string>
    <string name="logo">LOGO</string>
    <string name="logout_text">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="or_login_with_social_account">Or login with social account</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="submit">Submit</string>
    <string name="set">Set</string>
    <string name="forgotpasswordtext">Please, enter your email address. You will
       <br /> receive a link to create a new password via <br /> email. </string>
    <string name="forgot_password">Forgot Password</string>
    <string name="verify_your_account">Verify your account</string>
    <string name="we_sent_4_digit_code_to_your_phone">We sent 6 digit code to your phone</string>
    <string name="resend">Resend</string>
    <string name="please_select_the_reason_for_cancellation">Please select the reason<br /> for cancellation:</string>
    <string name="i_don_t_want_to_share">I don’t want to share</string>
    <string name="can_t_contact_the_driver">Can\'t contact the driver</string>
    <string name="driver_is_late">Driver is late</string>
    <string name="the_price_is_not_reasonable">The price is not reasonable</string>
    <string name="pickup_address_is_incorrect">Pickup address is incorrect</string>
    <string name="verify">Verify</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="term_text">I accept all the <font fgcolor="#F6E24F">Terms and Conditions</font></string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="city_name">City</string>
    <string name="home_add">Home Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="estimated_trip_time">Estimated trip time</string>
    <string name="available_balance">Available Balance</string>
    <string name="i_m_coming">I\'m Coming</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="home">Home</string>
    <string name="rider_isn_t_here">Rider Isn\'t Here</string>
    <string name="wrong_address_shown">Wrong address shown</string>
    <string name="don_t_charge_rider">Don\'t charge Rider</string>
    <string name="ride_history">Ride History</string>
    <string name="help">Help</string>
    <string name="sign_out">Sign Out</string>
    <string name="message">Message</string>
    <string name="promocode">Promocodes</string>
    <string name="change_language">Change Language</string>
    <string name="select_pick_up_address">Select Pick Up Address</string>
    <string name="sel_destination">Select Destination Address</string>
    <string name="next">Next</string>
    <string name="transactions">Transactions</string>
    <string name="recharge">Recharge</string>
    <string name="update_picture">Update Picture</string>
    <string name="save_details">Save Details</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="italian">Italian</string>
    <string name="german">German</string>
    <string name="desti_loc">Destination Location</string>
    <string name="update_when_you_arrived">Update when you arrived</string>
    <string name="start_the_trip">Start the trip</string>
    <string name="end_the_trip">End the trip</string>
    <string name="arrived_text">Are you sure you arrived at pickup location?</string>
    <string name="start_the_trip_text">Are you sure you want to start the trip?</string>
    <string name="end_the_trip_text">Are you sure you want to end the trip?</string>
    <string name="save">Save</string>
    <string name="kung_fu_chau_added_new_images_in_furniture_and_garden">Kung Fu Chau added new images in Furniture and Garden.</string>
    <string name="apply_now">Apply Now</string>
    <string name="type_a_message">Type a message</string>
    <string name="your_taxi_has_arrived">Your taxi has arrived</string>
    <string name="call">Call</string>
    <string name="searching_for_a_driver">Searching for a driver...</string>
    <string name="msg">Message</string>
    <string name="rate">Rate</string>
    <string name="payment_options">Payment Options</string>
    <string name="select_payment">Select Payment</string>
    <string name="card_payment">Card Payment</string>
    <string name="cash">Cash</string>
    <string name="trip_finish_text">Your trip is finished! Please do the payment</string>
    <string name="ok">Ok</string>
    <string name="your_trip_has_ended">Your Trip has ended</string>
    <string name="book_ride">Book Ride</string>
    <string name="please_check_internet">Please check your internet connection!</string>
    <string name="terms_condition">Terms &amp; Condition></string>
    <string name="terms_condition_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="my_vehicle">My Vehicle</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="vehicle_name">Vehicle Name</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="model">Model</string>
    <string name="brand">Brand</string>
    <string name="service_type">Service Type</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string-array name="vehicle_type">
        <item>Select Your Vehicle</item>
        <item>Sedan</item>
        <item>SUV</item>
        <item>Premium</item>
    </string-array>
    <string name="vehicle_service_type">Select Service Type</string>
    <string name="brand_type">Brand Type</string>
    <string name="vehicle_model">Model</string>
    <string name="number_plate">Lisence Plate Number</string>
    <string name="add">Add</string>
    <string name="upload_documents">Upload Documents</string>
    <string name="upload_documentss">Upload Document</string>
    <string name="done">Done</string>
    <string name="pan_card_text">Please upload pan card</string>
    <string name="driving_licesne_text">Please upload your driving licence</string>
    <string name="check_internet_text">Please check your internet connection!</string>
    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text</string>
    <string name="dummy_text1">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="_25_40_trips">$25 / 40 Trips</string>
    <string name="_50_90_trips">$50 / 90 Trips</string>
    <string name="_100_120_trips">$100 / 120 Trips</string>
    <string name="purchase">Purchase</string>
    <string name="documents">Documents</string>
    <string name="aadhar_card">Aadhar Card</string>
    <string name="driving_license">Driving License</string>
    <string name="pan_card">PAN Card</string>
    <string name="start">Start</string>
    <string name="ride_has_ended">Ride Has Ended</string>
    <string name="collect_payment">Collect Payment</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="rate_rider">Rate Rider</string>
    <string name="ratings_and_reviews">Ratings and Reviews</string>
    <string name="open_to_all_trip">Open to all trip</string>
    <string name="driver_preferences">Driver Preferences</string>
    <string name="services">Services</string>
    <string name="notify">Notifications</string>
    <string name="wallet_recharge">Recharge Wallet</string>
    <string name="recharge_wallet_through">Recharge Wallet Through</string>
    <string name="card_pay">Card Pay</string>
    <string name="paypal">Paypal</string>
    <string name="earnings">Earnings</string>
    <string name="total_earnings">Total Earnings</string>
    <string name="account">Account</string>
    <string name="tax_information">Tax Information</string>
    <string name="edit_account">Edit Account</string>
    <string name="insurance">Insurance</string>
    <string name="tax_profile">Tax Profile</string>
    <string name="invoice_settings">Invoice Settings</string>
    <string name="please_insert_your_first_and_last_name_on_entity_name_as_shown_on_your_abn_gst_registration">Please insert your first and last name, on entity name as shown on your ABN/ GST Registration.</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="country">Country</string>
    <string name="postal_code">Postal Code</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="continue1">Continue</string>
    <string name="cummunity_guidlines">Cummunity Guidlines</string>
    <string name="invoice">Invoice</string>
    <string name="select_invoice_generating_date">Select Invoice Generating Date</string>
    <string name="select_service">Select Your Service</string>
    <string name="ride_sharing">Ride Sharing</string>
    <string name="car_pooling">Car Pooling</string>
    <string name="add_vehicle_for_ride_share">Add Vehicle For Ride Share</string>
    <string name="add_vehicle_for_car_pool">Add Vehicle For Car Pool</string>
    <string name="normal_vehicle">Normal Vehicle</string>
    <string name="offer_pool">Offer Pool</string>
    <string name="select_date_and_time">Select Date And Time</string>
    <string name="add_pool_request">Offer Pool</string>
    <string name="available_riders">Available Riders</string>
    <string name="my_pool_request">My Pool Offered</string>
    <string name="vehicle_make">Select Vehicle Make</string>
    <string name="select_vehicle_model">Select Vehicle Model</string>
    <string name="add_service_type">Select Service Type For This Vehicle</string>
    <string name="both">Both</string>
    <string name="email_not_found">Email is not registered with us</string>
    <string name="reset_pass_msg">Reset password link sent to your mail-id</string>
    <string name="enter_name_text">Please enter your name</string>
    <string name="enter_name_firsttext">Please enter your first name</string>
    <string name="enter_name_lasttext">Please enter your last name</string>
    <string name="navigate_to_map">Navigate To Map</string>
    <string name="navigate_to_pickup_location">Navigate To Pickup Location</string>
    <string name="navigate_to_destination_location">Navigate To Drop Off location</string>
</resources>