<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_10sdp"
                android:src="@drawable/ic_back_black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppins_medium"
                android:padding="@dimen/_10sdp"
                android:text="@string/tax_profile"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/gray2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/poppins_medium"
            android:padding="@dimen/_8sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/invoice_settings"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_regular"
            android:padding="@dimen/_8sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/please_insert_your_first_and_last_name_on_entity_name_as_shown_on_your_abn_gst_registration"
            android:textColor="@color/gray"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@color/white">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/enter_your_full_name"
                android:imeOptions="actionNext"
                android:inputType="textVisiblePassword"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_12sdp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@color/white">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:backgroundTint="@color/white"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/city_name"
                android:imeOptions="actionNext"
                android:inputType="textVisiblePassword"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_12sdp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@color/white">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:backgroundTint="@color/white"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/country"
                android:imeOptions="actionNext"
                android:inputType="textVisiblePassword"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_12sdp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@color/white">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/postal_code"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="7"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_12sdp" />

        </RelativeLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="1.2"
                android:scaleY="1.2"
                android:layout_marginLeft="@dimen/_10sdp"
                android:buttonTint="@color/yellow" />

            <EditText
                android:id="@+id/tvTerms"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:focusableInTouchMode="false"
                android:focusable="false"
                android:cursorVisible="false"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/disclaimer"
                android:gravity="center"
                android:textColor="@color/gray"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_regular"
            android:padding="@dimen/_8sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/dummy_text"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:background="@drawable/login_bt_back_yellow"
            android:fontFamily="@font/poppins_medium"
            android:padding="@dimen/_10sdp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>