<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:id="@+id/header"
            android:layout_height="wrap_content"
            android:padding="@dimen/_15sdp">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="@dimen/_25sdp"
                android:visibility="gone"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/ic_back_black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/inter_semi_bold"
                android:text="@string/documents"
                android:textColor="@color/textColor"
                android:textSize="@dimen/_15sdp" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/header"
            android:fillViewport="true"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="vertical"
                android:padding="@dimen/_2sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/inter_semi_bold"
                    android:text="@string/aadhar_card"
                    android:visibility="gone"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_12sdp" />

                <ImageView
                    android:id="@+id/ivUploadImage"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:scaleType="fitXY"
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:src="@drawable/adhar_img" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/inter_semi_bold"
                    android:text="@string/driving_license"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_12sdp" />

                <ImageView
                    android:id="@+id/ivDriverLisence"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:scaleType="fitXY"
                    android:src="@drawable/driver_lisence_img" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/inter_semi_bold"
                    android:text="@string/pan_card"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_12sdp" />

                <ImageView
                    android:id="@+id/ivPan"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:scaleType="fitXY"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:src="@drawable/pan_img" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/llMain"
                    android:layout_marginLeft="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_25sdp"
                    android:background="@drawable/login_bt_back_yellow"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/save"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>


</layout>