<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@android:color/transparent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_10sdp"
            android:elevation="@dimen/_10sdp"
            app:cardElevation="@dimen/_10sdp"
            android:layout_margin="@dimen/_10sdp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/navigate_to_map"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btPickup"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/login_bt_back_yellow"
                    android:fontFamily="@font/poppins_medium"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/navigate_to_pickup_location"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btDropOff"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/login_bt_back_yellow"
                    android:fontFamily="@font/poppins_medium"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/navigate_to_destination_location"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp" />


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>