<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp">

                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_centerVertical="true"
                    android:visibility="gone"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:src="@drawable/ic_back_black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/poppins_medium"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/cummunity_guidlines"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/gray2"/>

            <ImageView
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:scaleType="fitXY"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_height="@dimen/_200sdp"
                android:src="@drawable/taxi_guideline"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/poppins_regular"
                android:padding="@dimen/_10sdp"
                android:text="@string/dummy_text1"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llMain"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_25sdp"
                android:background="@drawable/login_bt_back_yellow"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/continue1"
                android:layout_marginBottom="@dimen/_20sdp"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</layout>